--- a/app/index.html
+++ b/app/index.html
@@ -5,5 +5,7 @@
         <title>electron-react-template</title>
     </head>
     <body>
+        <div id='app'></div>
+        <script src='./build/main.js'></script>
     </body>
 </html>
