--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <div id='app'></div>
-        <script src='./build/main.js'></script>
+        <script src='http://localhost:3000/app/build/main.js'></script>
     </body>
 </html>
