Fix script src in production and update npm scripts
- Change `npm start` that builds production webpack and runs
  electron in production.
- Add `npm run dev` that runs HMR and electron in development.
- Fix the script src in `index.html` to differentiate between
  development (points to webpack-dev-server url) and production
  (points to production build file).

--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,16 @@
         <title>electron-react-template</title>
     </head>
     <body>
-        <div id='app'></div>
-        <script src='http://localhost:3000/app/build/main.js'></script>
+        <div id="app"></div>
+        <script>
+            (function(){
+                var src = 'build/main.js';
+                if (process.env.NODE_ENV === 'development') {
+                    var url = require('url');
+                    src = url.resolve('http://localhost:3000', 'app/' + src);
+                }
+                document.write('<script src="' + src + '"><\/script>');
+            })();
+        </script>
     </body>
 </html>
